Adding in reload templates true to address memory leak

--- a/assets/css/mapping.css
+++ b/assets/css/mapping.css
@@ -174,7 +174,7 @@ ul.links li, ul.links li a{
 	width: 9px;
 }
 .navigation .bgRedHome{
-	background: #900;
+/*  background: #900;*/
 	float: left; white-space:height: 27px;
 	width: 27px;
 }
