Better bar chart

--- a/m4r/views/charts.erb
+++ b/m4r/views/charts.erb
@@ -13,9 +13,9 @@
   <div id="chart-right-title">
     <h1>Financed Activities by <%= @page[:name] == "World" ? "Region" : "Product Line" %></h1>
   </div>
-  <div id="chart-right-stat-subtitle">
+  <!-- <div id="chart-right-stat-subtitle">
     <h1 id="funding_total"></h1>
-  </div>
+  </div> -->
   <div id="chart-right-graph"></div>
 </div>
 
