--- a/m4r/views/full.erb
+++ b/m4r/views/full.erb
@@ -71,7 +71,7 @@
                 </ul>
             </div><!--.navigation//-->
             <div id="local" class="clearfix">
-            	<div class="site-name"><a class="active" href="/"><%= @title || "Mapping for Results" %></a></div>
+            	<div class="site-name"><a class="active" href="<%= defined?(@additional_controls) ? '#' : '/' %>"><%= @title || "Mapping for Results" %></a></div>
             </div>
         </div><!--#header//-->
         <div id="main-wrap" style="<%= defined?(@show_sidebar) && @show_sidebar == false ? 'padding-right: 0px' : ''  %>">
