--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -1012,8 +1012,8 @@ if(typeof(F1)=='undefined') {F1 = {};}
       }
       r.g.barchart(0, 10, 440, 170, [values], bar_options).hover(fin, fout);;
       // r.g.axis(x_start, y_start, x_width, from, to, steps, orientation, labels, type, dashsize)
-      axis = r.g.axis(37,197,435,null,null,labels.length,2,labels, " ", 0);
-      axis.text.attr({font:"8px Arial", fill:"#333", "font-weight": "regular", "color": "#333"});
+      axis = r.g.axis(37,200,435,null,null,labels.length,2,labels, " ", 0);
+      // axis.text.attr({font:"8px Arial", fill:"#333", "font-weight": "regular", "color": "#333"});
       // axis2 = r.g.axis(35,190,300,0,400,10,1);
       return r;
       // F1.Visualizer.charts.bar(180, 405, bar_options, "chart-right-graph", {href: links, data_label: true, label: function() {          return links[this.bar.index]; }});
