--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -15,6 +15,7 @@
               </ul>
            </li>     
         <% end %>
+        <% if @page.name != "World" %>
           <li class="share"><a title="share" href="#" id="share_options"><span></span>SHARE</a>
               <ul class="dropmenu_options">
                 <li><a title="embed" href="#" id="embed_map"><span></span>Embed Map</a></li>
@@ -23,6 +24,7 @@
                 <!-- <li><a href="#" id="">Embed the Map</a></li> -->
               </ul>
           </li>
+          <% end %>
       </ul>
   </div>
   <%= partial :embed_links %>
