--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -890,24 +890,25 @@ if(typeof(F1)=='undefined') {F1 = {};}
 			jq('#sector_funding_title').html("Financed Activities for " + sector_names + " Sector")
 		}
 
-		   if(projects.length == 0){
-				jq('#sector_funding_total').hide();
-				jq('#chart-left-bar-chart').html("There are no projects in this sector. <a href='#' onclick='wb.sectorPieChart(\"all\", true);'>back to all sectors</a>");
-				return;
-			}
+        if(projects.length == 0){
+            jq('#sector_funding_total').hide();
+            jq('#chart-left-bar-chart').html("There are no projects in this sector. <a href='#' onclick='wb.sectorPieChart(\"all\", true);'>back to all sectors</a>");
+            return;
+        }
 
-			if(projects.length == 1){
-				jq('#chart-left-pie-chart').html("<br />" + projects[0].project_name + ".<br />There is only a single project in this sector.");
-				return;
-			}
+        if(projects.length == 1){
+            jq('#chart-left-pie-chart').html("<br />" + projects[0].project_name + ".<br />There is only a single project in this sector.");
+            return;
+        }
 
-			jq('#sector_funding_total').show();
-			jq('#chart-left-pie-chart').show();
+        jq('#sector_funding_total').show();
+        jq('#chart-left-pie-chart').show();
 
-			if(self.stylelayers["Project Locations"] !== undefined && self.stylelayers["Project Locations"] !== null)
-				opts["href"] = links;
-			
-			F1.Visualizer.charts.pie(190, width, pie_options, "chart-left-pie-chart", opts);		  
+        if(self.stylelayers["Project Locations"] !== undefined && self.stylelayers["Project Locations"] !== null) {
+            opts["href"] = links;
+        }
+
+        F1.Visualizer.charts.pie(190, width, pie_options, "chart-left-pie-chart", opts);		  
 
 	},
 	minesPieChart: function() {
@@ -1004,10 +1005,10 @@ if(typeof(F1)=='undefined') {F1 = {};}
       jq("#chart-right-graph").html("")
       var r = Raphael("chart-right-graph");
 
-      fin = function () {
+      var fin = function () {
           this.flag = r.g.popup(this.bar.x, this.bar.y, "$" + (this.bar.value).toFixed(2) + "b").insertBefore(this);
       }
-      fout = function () {
+      var fout = function () {
           this.flag.animate({opacity: 0}, 300, function () {this.remove();});
       }
       r.g.barchart(0, 10, 440, 170, [values], bar_options).hover(fin, fout);;
@@ -1078,15 +1079,17 @@ if(typeof(F1)=='undefined') {F1 = {};}
         possibleLayers = [];
         
         // getLayers doesn't work with Medusa
-        for(var i=0; i<15; i++) {
-            
-            var l = self.map.swf.getLayer(i);
-            
-            if(l !== null && l !== undefined){
-                l.order = i;
-                possibleLayers.push(l)
+        try {
+            for(var i=0; i<15; i++) {
+
+                var l = self.map.swf.getLayer(i);
+
+                if(l !== null && l !== undefined){
+                    l.order = i;
+                    possibleLayers.push(l)
+                }
+            } catch(err) {
             }
-        }
         // self.stylelayers["Project Locations"] = {order: 1, source: "", sharedLayer: false};
         // return;
         var index;
