Various fixes for Sputnik support and JS conflicts?

--- a/m4r/views/full.erb
+++ b/m4r/views/full.erb
@@ -17,14 +17,14 @@
     <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
     <link rel="stylesheet" href="/assets/css/mapping.css">
     <link rel="stylesheet" href="/assets/css/menu.css">
+    <%= partial :javascript %>
     <script type="text/javascript" charset="utf-8">
       // if (top.frames.length!=0)
       //   top.location=self.document.location;
     </script>
-    <%= partial :javascript %>
 </head>
 
-<body>
+<body onload="onload()">
 	<div id="container" class="clearfix">
         <div id="header" class="clearfix">
         	<a class="network-name" href="http://www.worldbank.org">The World Bank</a>
@@ -106,9 +106,9 @@
         <%= partial :footer %>
 
         <%= partial :initialize unless @page.new? %>
-        <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
 
     </div><!--#container//-->
 <%= partial :analytics %>
+
 </body>
 </html>
