--- a/m4r/views/initialize.erb
+++ b/m4r/views/initialize.erb
@@ -1,5 +1,5 @@
 <script type="text/javascript" charset="utf-8">
-  var wb;
+  var wb = null;
   function onload() {
   wb = new F1.WorldBank();
   <% if @page[:page_type] == "country" %>
