--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -24,7 +24,7 @@
 
   <%= partial :javascript %>
 </head>
-<body onload="onload()" class=" region-left region-right region-far-right region-content-top">
+<body class=" region-left region-right region-far-right region-content-top">
 
 <!-- Layout -->
 <div id="wrapper">
